<resources>
    <string name="app_name">More Store</string>
    <string name="registration">Регистрация</string>
    <string name="tel_or_email">Телефон или почта</string>
    <string name="get_code">Получить код</string>
    <string name="verify_code">Код подтверждения</string>
    <string name="you_will_get_code">В течении 2 минут вы получите смс с кодом</string>
    <string name="you_will_get_code2">подтверждения на номер</string>
    <string name="phone_number">+7 923 566-66-69</string>
    <string name="you_can_get_code_after">Получить код можно через</string>
    <string name="get_new_code">Получить новый код</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="next">Далее</string>
    <string name="text1">Какие бренды вы хотели бы найти у нас</string>
    <string name="text2">Ваша подборка по размерам будет начинаться\nс выбранных ниже сегментов</string>
    <string name="text3">Выбрать все</string>
    <string name="text4">Люкс</string>
    <string name="louis_vuitton_gucci_prada_dolce_gabbana">Louis Vuitton, Gucci, Prada, Dolce Gabbana\nи другие бренды премиум класса</string>
    <string name="middle_segment">Мидл-сегмент</string>
    <string name="tommy_hilfiger_michael_kors_furla_calvin_klein_n">Tommy Hilfiger, Michael Kors, Furla, Calvin Klein\nи другие стильные, современные бренды</string>
    <string name="mass_market">Масс-маркет</string>
    <string name="zara_h_m_bershka_asos_mango_n">Zara, H&amp;M, Bershka, ASOS, Mango\nи другие доступные бренды</string>
    <string name="economy">Эконом</string>
    <string name="economy_subtitle">Одежда и обувь без брендов по низким ценам</string>
    <string name="next2">Продолжить</string>
    <string name="how_service_work">Как работает сервис?</string>
    <string name="to_buyers">Покупателям</string>
    <string name="to_sellers">Продавцам</string>
    <string name="choice_payment">Выбор и оплата</string>
    <string name="choice_payment_description">Выберите товары и договоритесь\nс продавцом об удобной форме оплаты.</string>
    <string name="delivery">Получение товара</string>
    <string name="delivery_description">Продавец отправит товар курьерской\nслужбой или Яндекс.Drive к вам домой\nили в офис. Сроки отправки —\nот 3х часов до 3х дней. За доставкой\nможно следить в личном кабинете.\nЕсть возможность самовывоза.</string>
    <string name="deal_confirmation_title">Подтверждение сделки</string>
    <string name="deal_confirmation_content">После получения и проверки товара\nвы подтверждаете завершение сделки.</string>
    <string name="list_item_title">Разместите товар в приложении</string>
    <string name="list_item_content">Сфотографируйте ваш товар и укажите\nнеобходимые детали (размер, цена,\nбренд и т.д)</string>
    <string name="make_deal_title">Договоритесь о сделке</string>
    <string name="make_deal_content">Ответьте на вопросы покупателя\nи выберите удобный сервис доставки</string>
    <string name="delivery_title">Передайте вещь курьеру</string>
    <string name="delivery_content">Курьер доставит товар покупателю.\nВ пределах одного города доступна\nопция самовывоза</string>
    <string name="get_money_title">Получите ваши деньги</string>
    <string name="get_money_content">Деньги за проданный товар поступят\nвам на карту в течение 1 дня после\nподтверждения получения товара\nПокупателем</string>
    <string name="onboarding1_text">Приветствуем вас на ресейл площадке\nдля продажи брендовых вещей\nи любителей моды</string>
    <string name="onboarding2_info">Мы подберём вам вещи,\nподходящие по размеру</string>
    <string name="onboarding_suggestion">Советуем указать по два-три размера в блоке.\nИх можно будет изменить в настройках профиля.</string>
    <string name="top">Верх</string>
    <string name="choose_sizes">Укажите до трёх размеров (INT)</string>
    <string name="xxs">XXS</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="bottom">Низ</string>
    <string name="shoos">Обувь</string>
    <string name="go_on">Продолжить</string>
    <string name="_38">38</string>
    <string name="_38_5">38.5</string>
    <string name="_39">39</string>
    <string name="_39_5">39.5</string>
    <string name="_40">40</string>
    <string name="_40_5">40.5</string>
    <string name="second_life">Вторая жизнь</string>
    <string name="onboarding5_info1">Давая вещам вторую жизнь, мы снижаем\nпотребление натуральных и синтетических\nматериалов, затрачиваемых\nна её производство.</string>
    <string name="onbording5_info2">Если вы не нашли нового хозяина в течение\n2 месяцев, то мы поможем сдать вещи\nв благотворительные организации\nили пункты переработки материалов.</string>
    <string name="register">Зарегистрируйтесь</string>
    <string name="and_get">и получите</string>
    <string name="_15_percents">15%</string>
    <string name="on_first">на первый</string>
    <string name="order_with_promocode">заказ по промокоду</string>
    <string name="morestore1">MORESTORE1</string>
    <string name="enter_as_guest">Войти как гость</string>
    <string name="auth">Авторизоваться</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="enter_with_phone_or_email">Войти через телефон или почту</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="for_her">Для нее</string>
    <string name="for_him">Для него</string>
    <string name="confirm">Подтвердить</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="cart">Корзина</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="place">Разместить</string>
    <string name="messages">Сообщения</string>
    <string name="cabinet">Кабинет</string>
    <string name="do_you_want_search_in_st_pet">К сожалению ваш город не определён</string>
    <string name="yes">ДА</string>
    <string name="no_change_region">СМЕНИТЬ РЕГИОН</string>
    <string name="booked_product_info">Продавец уже договорился с покупателем\nи находится на этапе сделки. Товар может\nбыть снова доступен, если сделка\nне совершится.</string>
    <string name="deal_submitted">Сделка одобрена</string>
    <string name="submitted_deal_info">Перейти в корзину для оформления заказа</string>
    <string name="product_booked">Товар забронирован</string>
    <string name="sold">Уже купили</string>
    <string name="sold_out_info">Товар уже нашел нового собственника, но вы\nеще можете связаться с продавцом. Вдруг у\nнего есть что-то похожее.</string>
    <string name="in_stock2">В наличии</string>
    <string name="booked">Забронированные</string>
    <string name="sold_products">Проданные</string>
    <string name="search_everywhere">ИСКАТЬ ВЕЗДЕ</string>
    <string name="cancel">Отмена</string>
    <string name="sign_ruble">₽</string>
    <string name="banner_title">Черный снова в моде</string>
    <string name="banner_content">Стильные брендовые вещи,\nкоторые дополнят любой\nгардероб</string>
    <string name="all_category">Все товары</string>
    <string name="category1_name">Сумки</string>
    <string name="shoes">Обувь</string>
    <string name="category3_name">Одежда</string>
    <string name="outerwear">Верхняя\nодежда</string>
    <string name="accessories">Аксессуары</string>
    <string name="sport_tourism">Спорт и туризм</string>
    <string name="category7_name">Для детей</string>
    <string name="brands">Бренды</string>
    <string name="more_brands">Еще бренды</string>
    <string name="for_women">Для женщин</string>
    <string name="_20_new_offers">+20 новых предложений за сегодня</string>
    <string name="_356_offers">еще предложения</string>
    <string name="for_kids">Для детей</string>
    <string name="_135_offers">+135 новых предложений за сегодня</string>
    <string name="_546_offers">еще предложения</string>
    <string name="filter">Фильтр</string>
    <string name="clear">Очистить</string>
    <string name="sorting">Сортировка</string>
    <string name="new_items">Новые</string>
    <string name="who">Кому</string>
    <string name="women">Женщинам</string>
    <string name="show_items">Показывать товары</string>
    <string name="in_stock">В наличии, забронированные</string>
    <string name="categories">Категории</string>
    <string name="all_categories">Любая категория</string>
    <string name="style">Стиль</string>
    <string name="all_styles">Все стили</string>
    <string name="brand">Бренд</string>
    <string name="create_product">Создать товар</string>
    <string name="all_brands">Все бренды</string>
    <string name="price">Цена</string>
    <string name="condition">Состояние</string>
    <string name="all_conditions">Все состояния</string>
    <string name="size">Размер</string>
    <string name="all_sizes">Все размеры</string>
    <string name="color">Цвет</string>
    <string name="all_colors">Все цвета</string>
    <string name="materials">Материалы</string>
    <string name="all_materials">Все материалы</string>
    <string name="search_region">Регион поиска</string>
    <string name="all_regions">Все регионы</string>
    <string name="safe_filter">Сохранить фильтр</string>
    <string name="show_offers">Показать предложения</string>
    <string name="another">Другое</string>
    <string name="dresses">Платья</string>
    <string name="home_clothes">Домашняя одежда</string>
    <string name="jeans">Джинсы</string>
    <string name="jempers_sweaters">Джемперы и Свитеры</string>
    <string name="outerwear2">Верхняя одежда</string>
    <string name="trousers">Брюки</string>
    <string name="blouses_shirts">Блузки и рубашки</string>
    <string name="underwear">Белье</string>
    <string name="black">черный</string>
    <string name="show_offers2">Показать предложения</string>
    <string name="colorful">разноцветный</string>
    <string name="purple">пурпурный</string>
    <string name="violet">фиолетовый</string>
    <string name="yellow">желтый</string>
    <string name="peach">персиковый</string>
    <string name="you_created_product">Поздравляем!\nВы создали товар на MoreStore</string>
    <string name="you_created_product_info">В течении 24 часов наши специалисты\nпроверят ваше объявление. Если оно\nсоответствует требованиям нашего\nмагазина, мы опубликуем его.</string>
    <string name="you_created_product_info2"><![CDATA[Проверить статус объявления можно тут:\nЛичный кабинет > Мои объявления >\nНа модерации]]></string>
    <string name="myAddress_new_personal_title">Личные данные получателя</string>
    <string name="myAddress_new_personal_fio">ФИО</string>
    <string name="myAddress_new_personal_phone">Телефон</string>
    <string name="myAddress_new_address_title">Адрес</string>
    <string name="myAddress_new_address_mapSelect">Выбрать на карте</string>
    <string name="myAddress_new_address_city">Город</string>
    <string name="myAddress_new_address_city_hint">Выберите город</string>
    <string name="myAddress_new_address_street">Улица</string>
    <string name="myAddress_new_address_street_hint">Введите улицу</string>
    <string name="myAddress_new_address_index">Индекс</string>
    <string name="myAddress_new_address_index_hint">000000</string>
    <string name="myAddress_new_address_house">Дом</string>
    <string name="myAddress_new_address_house_hint">Номер дома</string>
    <string name="myAddress_new_address_housing">Корпус</string>
    <string name="myAddress_new_address_building">Строение</string>
    <string name="myAddress_new_address_apartment">Квартира</string>
    <string name="myAddress_new_address_default">Адрес по умолчанию</string>
    <string name="myAddress_new_address_save">Сохранить</string>
    <string name="myAddress_new_address_delete">Удалить</string>
</resources>