<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar_titled_center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:background="@color/gray3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="11dp"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="24dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/ManropeReg_16_gray2"
                        android:text="@string/myAddress_new_personal_title"
                        />

                    <!--todo replace by TitledTextField-->
                    <TextView
                        style="@style/App.TextView.Title.Field"
                        android:layout_marginTop="17dp"
                        android:text="@string/myAddress_new_personal_fio"
                        />

                    <EditText android:id="@+id/fullname"
                        style="@style/App.EditText.Field"
                        android:inputType="textCapWords"
                        />

                    <TextView
                        style="@style/App.TextView.Title.Field"
                        android:layout_marginTop="16dp"
                        android:text="@string/myAddress_new_personal_phone"
                        />

                    <EditText android:id="@+id/phoneNumber"
                        style="@style/App.EditText.Field"
                        android:inputType="phone"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="11dp"
                    android:paddingHorizontal="10dp"
                    android:paddingBottom="24dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/ManropeReg_16_gray2"
                        android:text="@string/myAddress_new_address_title"
                        />

                    <TextView android:id="@+id/selectOnMap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/myAddress_new_address_mapSelect"
                        android:gravity="center_vertical"
                        android:drawablePadding="8dp"
                        android:textSize="16sp"
                        android:layout_marginTop="18dp"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/green"
                        app:drawableStartCompat="@drawable/ic_geomarker" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/myAddress_new_address_city"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/black"
                        />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:background="@drawable/bg_rect_bordlight_round4"
                        android:paddingHorizontal="12dp"
                        android:paddingVertical="9dp"
                        android:textColor="@color/gray2"
                        android:text="@string/myAddress_new_address_city_hint"
                        app:drawableEndCompat="@drawable/ic_arrowangle_right" />

                    <!--todo replace by TitledTextField-->
                    <TextView
                        style="@style/App.TextView.Title.Field"
                        android:layout_marginTop="17dp"
                        android:text="@string/myAddress_new_address_street"
                        />

                    <EditText android:id="@+id/street"
                        style="@style/App.EditText.Field"
                        android:hint="@string/myAddress_new_address_street_hint"
                        android:inputType="textCapSentences"
                        />

                    <!--todo replace by TitledTextField-->

                    <TextView
                        style="@style/App.TextView.Title.Field"
                        android:layout_marginTop="16dp"
                        android:text="@string/myAddress_new_address_index"
                        />

                    <EditText android:id="@+id/index"
                        style="@style/App.EditText.Field"
                        android:hint="@string/myAddress_new_address_index_hint"
                        android:inputType="number"
                        android:maxLength="6"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        >

                        <!--todo replace by TitledTextField-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >

                            <TextView
                                style="@style/App.TextView.Title.Field"
                                android:text="@string/myAddress_new_address_house"
                                />

                            <EditText android:id="@+id/house"
                                style="@style/App.EditText.Field"
                                android:hint="@string/myAddress_new_address_house_hint"
                                />


                        </LinearLayout>

                        <!--todo replace by TitledTextField-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical"
                            >

                            <TextView
                                style="@style/App.TextView.Title.Field"
                                android:text="@string/myAddress_new_address_housing"
                                />

                            <EditText android:id="@+id/housing"
                                style="@style/App.EditText.Field"
                                />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        >

                        <!--todo replace by TitledTextField-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >

                            <TextView
                                style="@style/App.TextView.Title.Field"
                                android:text="@string/myAddress_new_address_building"
                                />

                            <EditText android:id="@+id/building"
                                style="@style/App.EditText.Field"
                                />

                        </LinearLayout>

                        <!--todo replace by TitledTextField-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"                            android:layout_marginStart="8dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            >

                            <TextView
                                style="@style/App.TextView.Title.Field"
                                android:text="@string/myAddress_new_address_apartment"
                                />

                            <EditText android:id="@+id/apartment"
                                style="@style/App.EditText.Field"
                                />

                        </LinearLayout>

                    </LinearLayout>

                    <CheckBox android:id="@+id/defaultAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/green"
                        android:text="@string/myAddress_new_address_default"
                        android:textAppearance="@style/ManropeReg_14_black"
                        android:layout_marginTop="16dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton android:id="@+id/save"
        style="@style/App.Button.Main.Bottom"
        android:enabled="false"
        android:text="@string/myAddress_new_address_save"
        />

</LinearLayout>