<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_created_product"
        android:textAppearance="@style/bold_16"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_created_product_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="89dp"
        android:textAppearance="@style/regular_14"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_created_product_info2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="193dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/regular_14"/>

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_x"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:tint="@color/gray2" />

</com.google.android.material.card.MaterialCardView>