<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray4">


    <ImageView
        android:id="@+id/allScreenImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitEnd"
        android:src="@drawable/first_launch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView6"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/gradient1"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:background="@drawable/onboarding6_gradient1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/gradient2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/onboarding1_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/infoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/infoTextView" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/backIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/and_get"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/infoTextView"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

    <TextView
        android:id="@+id/infoTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/_15_percents"
        android:fontFamily="@font/manrope_extrabold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/infoTextView2"
        app:layout_constraintTop_toTopOf="@+id/infoTextView2" />

    <TextView
        android:id="@+id/infoTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/on_first"
        android:fontFamily="@font/manrope_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/infoTextView3"
        app:layout_constraintTop_toTopOf="@+id/infoTextView3" />

    <TextView
        android:id="@+id/infoTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/manrope_medium"
        android:text="@string/order_with_promocode"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/infoTextView2"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView2" />

    <TextView
        android:id="@+id/infoTextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/manrope_extrabold"
        android:text="@string/morestore1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/infoTextView5"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guestLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="16dp"
        style="@style/buttonStyle"
        android:text="@string/enter_as_guest"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        style="@style/buttonStyle"
        android:backgroundTint="@color/black"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>